Change hero-img home-size to stop button cut off

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,7 +35,7 @@ html {
 
 .hero-img-home,
 .hero-img-all-plants {
-  height: 80%;
+  height: 85%;
 }
 
 .hero-img-profile {
